<resources>
    <string name="app_name">Concal</string>
    <string name="space" />
    <string name="t_t_concal">ConCal</string>
    <string name="space2" />
    <string name="concrete_strength_ncalculator">Concrete Strength \nPredictor</string>
    <string name="flooring_calculator">Flooring Calculator</string>
    <string name="brick_calculator">Brick Calculator</string>
    <string name="ac_size_calculator">AC Size Calculator</string>
    <string name="wood_frame_ncalculator">Wood Frame \nCalculator</string>
    <string name="steel_weight_ncalculator">Steel Quantity \nCalculator</string>
    <string name="calculator">Calculator</string>
    <string name="bricks">Bricks</string>
    <string name="ac">AC</string>
    <string name="wood_frame">Wood frame</string>
    <string name="flooring">flooring</string>
    <string name="staicase_mixture_ncalculator">StaiCase Mixture \nCalculator</string>
    <string name="anti_termite_ncalculator">Anti-termite \nCalculator</string>
    <string name="calculate">Calculate</string>
    <string name="plus">+</string>
    <string name="min">-</string>
    <string name="water_tank_capacity_n_tcalculator">Water Tank Capacity\n\tCalculator</string>
    <string name="logo">Logo</string>
</resources>